--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
     <header>
-        <h2> <a href="./index.html">Photon</a></h2>
-        <form class="searchBtn">
+        <h2> <a href="./index.html" id="logo">Photon</a></h2>
+        <form class="search-form">
             <input type="text" name="search" class="search-input">
+            <button>submit</button>
         </form>
     </header>
+    <main>
+        <div class="gallery"></div>
+    </main>
 
+    <!-- <div class="nav-btn">
+        <button class="more">More </button>
+    </div> -->
     <script src="app.js"></script>
 </body>
 </html>
