loaded gallery from api

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
+    <!-- external stylesheets -->
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
@@ -12,16 +19,16 @@
         <h2> <a href="./index.html" id="logo">Photon</a></h2>
         <form class="search-form">
             <input type="text" name="search" class="search-input">
-            <button>submit</button>
+            <button class="submit-btn" type="submit">Submit</button>
         </form>
     </header>
     <main>
         <div class="gallery"></div>
     </main>
 
-    <!-- <div class="nav-btn">
+    <div class="nav-btn">
         <button class="more">More </button>
-    </div> -->
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
