--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h2> <a href="./index.html" id="logo">Photon</a></h2>
+        <h2> <a href="./index.html" id="logo">Gallery</a></h2>
         <form class="search-form">
             <input type="text" name="search" class="search-input">
             <button class="submit-btn" type="submit">Submit</button>
